Adding tag widget library

--- a/views/tagInput.html
+++ b/views/tagInput.html
@@ -1,6 +1,6 @@
 <form method='POST' action='?action=search'>
 	<div class='form-group'>
-		<input type='text' class='fv-tag-input input-lg form-control' name='tags' placeholder='Enter a space separated list of tags to search on. e.g. "cats dogs"'/>
+		<input type='text' class='fv-tag-input input-lg form-control' name='tags' placeholder='Enter a comma separated list of tags to search on. e.g. "cats,dogs"'/> <!--No longer visible since including jQuery tagsinput but keeping here as fallback-->
 		<input type='submit' class='fv-search-button btn btn-primary btn-lg' value='Search'/>
 	</div>
 </form>
